<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4a5a71">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#364053"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/coolvetica"
            android:gravity="center"
            android:text="@string/discord"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/GotMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:text="@string/GotAMessage"
            android:fontFamily="@font/coolvetica"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:paddingTop="30dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:id="@+id/got_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="70dp"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/SendMail_mess"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/SendMail"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
            <CheckBox
                android:id="@+id/reaction2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reaction"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
            <CheckBox
                android:id="@+id/reaction3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reaction"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/GotALike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:text="@string/GotALike"
            android:fontFamily="@font/coolvetica"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:paddingTop="30dp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:id="@+id/got_a_like"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="70dp"
            android:visibility="gone">
            <CheckBox
                android:id="@+id/SendMail_like"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/SendMail"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
            <CheckBox
                android:id="@+id/reaction22"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reaction"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
            <CheckBox
                android:id="@+id/reaction32"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reaction"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/GotACom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:text="@string/GotAComment"
            android:fontFamily="@font/coolvetica"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:paddingTop="30dp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:id="@+id/got_a_com"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="70dp"
            android:visibility="gone">
            <CheckBox
                android:id="@+id/SendMail_com"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/SendMail"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
            <CheckBox
                android:id="@+id/reaction23"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reaction"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
            <CheckBox
                android:id="@+id/reaction33"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reaction"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/GotAPub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:text="@string/GotAPublisht"
            android:fontFamily="@font/coolvetica"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:paddingTop="30dp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:id="@+id/got_a_pub"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="70dp"
            android:visibility="gone">
            <CheckBox
                android:id="@+id/SendMail_pub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/SendMail"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
            <CheckBox
                android:id="@+id/reaction24"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reaction"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
            <CheckBox
                android:id="@+id/reaction34"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reaction"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/GotAGP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:text="@string/GotAGrpPost"
            android:fontFamily="@font/coolvetica"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:paddingTop="30dp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:id="@+id/got_a_gp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="70dp"
            android:visibility="gone">
            <CheckBox
                android:id="@+id/SendMail_gp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/SendMail"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
            <CheckBox
                android:id="@+id/reaction25"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reaction"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
            <CheckBox
                android:id="@+id/reaction35"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reaction"
                android:fontFamily="@font/coolvetica"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="5dp"
                android:paddingStart="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingTop="20dp"
        android:paddingRight="60dp">

        <ProgressBar
            android:id="@+id/DsProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:background="#009a9a"
            android:clickable="true"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:padding="16dp"
            android:text="Validate"
            android:textColor="#d9e5f3"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_button_ds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="#0758DD"
            android:clickable="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:padding="5dp"
            android:text="Continue with Discord"
            android:textColor="#d9e5f3"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/logout_button_ds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#0758DD"
            android:clickable="true"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:padding="5dp"
            android:text="Disconnection"
            android:textColor="#d9e5f3"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>